INCLUDES=@all_includes@

noinst_LTLIBRARIES=libio.la

noinst_HEADERS=\
 bio_buffer_p.h \
 bio_file_p.h \
 bio_socket_p.h \
 bufferedio_l.h \
 bufferedio_p.h

iheaderdir=${includedir}/gwenhywfar
iheader_HEADERS=\
 bio_buffer.h \
 bio_file.h \
 bio_socket.h \
 bufferedio.h

libio_la_SOURCES=\
 bio_buffer.c \
 bio_file.c \
 bio_socket.c \
 bufferedio.c
